data/derived/sp14/progs/unify/prog1393.ml.out
Characters 73-93:
  | Sine a -> sin(eval(buildX(),a,y))
                 ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         float
